Cleanup - rename and add tests